fix spacing

--- a/blocks/header/__lang-link/header__lang-link.css
+++ b/blocks/header/__lang-link/header__lang-link.css
@@ -6,7 +6,8 @@
     font-size: 24px;
     line-height: 28px;
     color: #FFFFFF;
-    cursor: pointer;transition: opacity linear 0.25s;
+    cursor: pointer;
+    transition: opacity linear 0.25s;
     text-decoration: none;
 }
 
